# gen/go/products/api.go
@@ -110,6 +110,9 @@ type PostWarehouseIdProductsParams struct {
 	Offset *OffsetParam `form:"offset,omitempty" json:"offset,omitempty"`
 }
 
+// PostCategoriesJSONRequestBody defines body for PostCategories for application/json ContentType.
+type PostCategoriesJSONRequestBody = Category
+
 // PostProductsJSONRequestBody defines body for PostProducts for application/json ContentType.
 type PostProductsJSONRequestBody = ProductCreate
 
@@ -124,15 +127,15 @@ type PostWarehouseJSONRequestBody = WarehouseCreate
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
-	// delete category
-	// (DELETE /categories)
-	DeleteCategories(c *gin.Context)
 	// Get category tree
 	// (GET /categories)
 	GetCategories(c *gin.Context)
 	// create new category
 	// (POST /categories)
 	PostCategories(c *gin.Context)
+	// delete category
+	// (DELETE /categories/{id})
+	DeleteCategoriesId(c *gin.Context, id IdParam)
 	// List all products
 	// (GET /products)
 	GetProducts(c *gin.Context, params GetProductsParams)
@@ -180,21 +183,6 @@ type ServerInterfaceWrapper struct {
 
 type MiddlewareFunc func(c *gin.Context)
 
-// DeleteCategories operation middleware
-func (siw *ServerInterfaceWrapper) DeleteCategories(c *gin.Context) {
-
-	c.Set(BearerAuthScopes, []string{})
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		middleware(c)
-		if c.IsAborted() {
-			return
-		}
-	}
-
-	siw.Handler.DeleteCategories(c)
-}
-
 // GetCategories operation middleware
 func (siw *ServerInterfaceWrapper) GetCategories(c *gin.Context) {
 
@@ -221,6 +209,32 @@ func (siw *ServerInterfaceWrapper) PostCategories(c *gin.Context) {
 	}
 
 	siw.Handler.PostCategories(c)
+}
+
+// DeleteCategoriesId operation middleware
+func (siw *ServerInterfaceWrapper) DeleteCategoriesId(c *gin.Context) {
+
+	var err error
+
+	// ------------- Path parameter "id" -------------
+	var id IdParam
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", c.Param("id"), &id, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter id: %w", err), http.StatusBadRequest)
+		return
+	}
+
+	c.Set(BearerAuthScopes, []string{})
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		middleware(c)
+		if c.IsAborted() {
+			return
+		}
+	}
+
+	siw.Handler.DeleteCategoriesId(c, id)
 }
 
 // GetProducts operation middleware
@@ -552,9 +566,9 @@ func RegisterHandlersWithOptions(router gin.IRouter, si ServerInterface, options
 		ErrorHandler:       errorHandler,
 	}
 
-	router.DELETE(options.BaseURL+"/categories", wrapper.DeleteCategories)
 	router.GET(options.BaseURL+"/categories", wrapper.GetCategories)
 	router.POST(options.BaseURL+"/categories", wrapper.PostCategories)
+	router.DELETE(options.BaseURL+"/categories/:id", wrapper.DeleteCategoriesId)
 	router.GET(options.BaseURL+"/products", wrapper.GetProducts)
 	router.POST(options.BaseURL+"/products", wrapper.PostProducts)
 	router.DELETE(options.BaseURL+"/products/:id", wrapper.DeleteProductsId)
